fix alt corsi e contrasti colori colori

--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,11 @@
 	--scrollbar-background: #282828;
 	--disabled-color: #888888;
 
-	--forza: #A80600;
+	--forza: #d30700;
 	--forza-text: white;
 	--equilibrio: #916f00;
 	--equilibrio-text: white;
-	--resistenza: #006627;
+	--resistenza: #007c30;
 	--resistenza-text: white;
 	--stabilita: #4b4ff7;
 	--stabilita-text: white;
@@ -66,11 +66,11 @@
 		--scrollbar-background: #282828;
 		--disabled-color: #888888;
 	
-		--forza: #A80600;
+		--forza: #d30700;
 		--forza-text: white;
 		--equilibrio: #916f00;
 		--equilibrio-text: white;
-		--resistenza: #0CB04B;
+		--resistenza: #007c30;
 		--resistenza-text: white;
 		--stabilita: #4b4ff7;
 		--stabilita-text: white;
